Fix Firebase credentials path parsing and fallback handling